--- a/ide/allcompileroptions.lfm
+++ b/ide/allcompileroptions.lfm
@@ -37,6 +37,7 @@ object frmAllCompilerOptions: TfrmAllCompilerOptions
     OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
     HelpButton.DefaultCaption = True
+    HelpButton.OnClick = HelpButtonClick
     CloseButton.Name = 'CloseButton'
     CloseButton.DefaultCaption = True
     CancelButton.Name = 'CancelButton'
