IDE, Debugger: Callstack, implement middle (double) click for "set as current" (and jump to source)

--- a/ide/packages/idedebugger/callstackdlg.lfm
+++ b/ide/packages/idedebugger/callstackdlg.lfm
@@ -44,6 +44,7 @@ object CallStackDlg: TCallStackDlg
     ViewStyle = vsReport
     OnClick = lvCallStackClick
     OnDblClick = lvCallStackDBLCLICK
+    OnMouseDown = lvCallStackMouseDown
   end
   object ToolBar1: TToolBar
     Left = 0
