Cody/Dictionary: Ability to select identifier by double click

--- a/components/codetools/ide/codyidentifiersdlg.lfm
+++ b/components/codetools/ide/codyidentifiersdlg.lfm
@@ -69,7 +69,7 @@ object CodyIdentifiersDlg: TCodyIdentifiersDlg
     BorderSpacing.Right = 6
     BorderSpacing.Bottom = 1
     ItemHeight = 0
-    OnClick = ItemsListBoxClick
+    OnDblClick = ItemsListBoxDblClick
     OnSelectionChange = ItemsListBoxSelectionChange
     PopupMenu = PopupMenu1
     TabOrder = 2
